[gd_scene load_steps=7 format=2]

[ext_resource path="res://Objects/Trail.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/topdown-player.svg" type="Texture" id=2]
[ext_resource path="res://Objects/ShipWithTrail.gd" type="Script" id=3]
[ext_resource path="res://Objects/Bullet.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=2]
radius = 35.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 660, 32.37 )

[node name="ShipWithTrail" type="KinematicBody2D" groups=["Player"]]
position = Vector2( 511.602, 297.63 )
script = ExtResource( 3 )
rotation_speed = 5.0
Bullet = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
rotation = -1.5708
current = true
zoom = Vector2( 2, 2 )

[node name="Trail" parent="." instance=ExtResource( 1 )]
z_index = -1
points = PoolVector2Array( -84.602, 0.369995, -0.09, 0.3 )
width = 50.0
is_emitting = true
target_path = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6, 0 )
shape = SubResource( 2 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 46, 0 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 691.398, 0 )
shape = SubResource( 3 )

[node name="Autoshoot_Timer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
